更新清单，添加待办与问题。写累了，休息会

--- a/大纲/抽象清单.md
+++ b/大纲/抽象清单.md
@@ -1,7 +1,7 @@
 记录一些抽象，想到一条记录一条
 
 1. 人的意识分为原始印象、抽象、代词三类。
-2. 两个原则：忠于事实、实用主义。
+2. 两个原则：忠于事实、实用主义。几个特点：相似、大多数、共识（这些属于对抽象论的抽象）
 3. 抽象就是节点的共性，节点可以是原始印象或抽象，共性通过比较得来。
 4. 抽象聚焦于共性而忽视差异。
 5. 抽象通过提取共性而减少了对被抽象节点的重复记忆。
@@ -18,4 +18,6 @@
 16. 记忆的方法论：对抽象进行抽象，记忆共性加差异，而不是独立的一条抽象。
 17. 抽象的边界问题：一是对未知事物是否符合抽象，即可预测性，无法保证；二是抽象域的边界模糊；三是误差被忽略。
 18. 教的方法论：学的反过来。
+19. 元认知作为认知的自我感知观察，相当于另一个信息输入源，因此提供了更多信息，这些信息形成的抽象即抽象论。因此元认知是抽象论与以往理论不同的主要成因。
+20. 元认知是一种技能，是研究抽象论的重要工具，另一方面，元认知又被抽象论的理论体系定义或者描述，这就注定意味着抽象论的学习或研究过程是个循序渐进的过程，你无法先学元认知再学抽象论或是反过来。元认知给你提供抽象论的原始印象，帮你获得更多的抽象，而抽象论的完善又进一步帮你更好的认识元认知，从而更好的掌握它。
 
