用drawio画了抽象部分的节点图

--- a/大纲/待办.md
+++ b/大纲/待办.md
@@ -7,6 +7,8 @@
 
 ##### 问题
 
-1. 需要一种类似思维导图的形式作为承载抽象展开的媒介，并且最好可以以文本形式储存以方便版本控制器跟踪
+1. ~~需要一种类似思维导图的形式作为承载抽象展开的媒介，并且最好可以以文本形式储存以方便版本控制器跟踪~~暂时用drawio，以文本形式储存的看了mermaid，画图麻烦并且表达能力差一点
 2. 需要优化文章的阅读体验，最好用gitpage以类似博客的形式展示，也可以编译成电子书
+3. 目前的表达习惯，抽象既是动词（找共性这一过程）也可以是名词（找共性的结果），容易混淆，提高学习成本
+4. 明确表达域的概念
 
