--- a/大纲/抽象清单.md
+++ b/大纲/抽象清单.md
@@ -1,6 +1,6 @@
 记录一些抽象，想到一条记录一条
 
-1. 人的意识分为原始印象、抽象、代词三类。
+1. ~~人的意识分为原始印象、抽象、代词三类。~~发现抽象和原始印象更像是在抽象过程中相对出现的概念，并且，这样分类太潦草————基本什么都可以是原始印象。
 2. 两个原则：忠于事实、实用主义。几个特点：相似、大多数、共识（这些属于对抽象论的抽象）
 3. 抽象就是节点的共性，节点可以是原始印象或抽象，共性通过比较得来。
 4. 抽象聚焦于共性而忽视差异。
@@ -8,7 +8,7 @@
 6. 抽象总是来自于人已知节点的共性，但对未知信息具有一定的预测作用。
 7. 基本上，人的所有规律都是抽象，学科是对所有抽象的分类，即具体某学科是对一部分具有某种共性的抽象的抽象的代词。
 8. 你必须用抽象论去组织你的知识的记忆，它才能发挥作用，才能生产价值。
-9. 抽象域的概念：抽象适用的范围，新发生的信息于原有抽象不符时，要么修改抽象域要么调整抽象。
+9. 抽象域的概念：抽象适用的范围，新发生的信息与原有抽象不符时，要么修改抽象域要么调整抽象。
 10. 关系是一种抽象，其节点具有时间或空间上的相似性。
 11. 相关关系、因果关系是两种特殊的关系。
 12. 人的精力有限。
