--- a/大纲/待办.md
+++ b/大纲/待办.md
@@ -2,13 +2,10 @@
 
 ##### 计划
 
-1. 目前计划全书分成三部分，第一部分详细介绍近似的理论本身，第二部分将理论的拓展应用，第三部分讨论理论与现实的差距，及一些我意识到的问题，及对未来可能的展望
-2. 按照抽象论教育方法论，我会将抽象清单的抽象溯源，找到是谁的推论、从哪抽象而来，以此展开，以节点为节点形成一个类似树的结构，然后再从原始印象开始倒叙，形成第一部分
+1. 先写个样看看情况先
 
 ##### 问题
 
-1. ~~需要一种类似思维导图的形式作为承载抽象展开的媒介，并且最好可以以文本形式储存以方便版本控制器跟踪~~暂时用drawio，以文本形式储存的看了mermaid，画图麻烦并且表达能力差一点
-2. 需要优化文章的阅读体验，最好用gitpage以类似博客的形式展示，也可以编译成电子书
-3. 目前的表达习惯，抽象既是动词（找共性这一过程）也可以是名词（找共性的结果），容易混淆，提高学习成本
-4. 明确表达域的概念
+1. 明确表达域的概念
+2. 简单点搞吧，尽快发布
 
