--- a/大纲/抽象清单.md
+++ b/大纲/抽象清单.md
@@ -1,23 +1,23 @@
 记录一些抽象，想到一条记录一条
 
-1. ~~人的意识分为原始印象、抽象、代词三类。~~发现抽象和原始印象更像是在抽象过程中相对出现的概念，并且，这样分类太潦草————基本什么都可以是原始印象。
-2. 两个原则：忠于事实、实用主义。几个特点：相似、大多数、共识（这些属于对抽象论的抽象）
-3. 抽象就是节点的共性，节点可以是原始印象或抽象，共性通过比较得来。
-4. 抽象聚焦于共性而忽视差异。
-5. 抽象通过提取共性而减少了对被抽象节点的重复记忆。
-6. 抽象总是来自于人已知节点的共性，但对未知信息具有一定的预测作用。
-7. 基本上，人的所有规律都是抽象，学科是对所有抽象的分类，即具体某学科是对一部分具有某种共性的抽象的抽象的代词。
-8. 你必须用抽象论去组织你的知识的记忆，它才能发挥作用，才能生产价值。
-9. 抽象域的概念：抽象适用的范围，新发生的信息与原有抽象不符时，要么修改抽象域要么调整抽象。
-10. 关系是一种抽象，其节点具有时间或空间上的相似性。
-11. 相关关系、因果关系是两种特殊的关系。
-12. 人的精力有限。
-13. 抽象论是元认知的产物，即意识的自我观察，因此带有强烈的个人特色和主观倾向。
-14. 抽象三种分类：由节点抽象而来、已有抽象的推论、人为构造
-15. 学习的方法论：学科理论是抽象的集合，而最初的源头总是节点。通过代词做关键词利用搜索引擎等自上而下找到最具体的抽象，必须是直接从原始印象抽象来的，然后了解这条抽象的原始印象，可以高效学习它，然后学习与已掌握有关联的抽象，然后再去总结抽象的抽象。因为联系到你已熟知的节点的抽象是最容易接受和记忆的。后面再对抽象进行抽象是为了高效记忆。
-16. 记忆的方法论：对抽象进行抽象，记忆共性加差异，而不是独立的一条抽象。
-17. 抽象的边界问题：一是对未知事物是否符合抽象，即可预测性，无法保证；二是抽象域的边界模糊；三是误差被忽略。
-18. 教的方法论：学的反过来。
-19. 元认知作为认知的自我感知观察，相当于另一个信息输入源，因此提供了更多信息，这些信息形成的抽象即抽象论。因此元认知是抽象论与以往理论不同的主要成因。
-20. 元认知是一种技能，是研究抽象论的重要工具，另一方面，元认知又被抽象论的理论体系定义或者描述，这就注定意味着抽象论的学习或研究过程是个循序渐进的过程，你无法先学元认知再学抽象论或是反过来。元认知给你提供抽象论的原始印象，帮你获得更多的抽象，而抽象论的完善又进一步帮你更好的认识元认知，从而更好的掌握它。
+- 我们把思维的某些过程提取共性后找个词指代，从而方便讨论与研究，不一定非得把所有的思维过程都总结分类，因为咱目前还没那个能力。没能力分类就不分，反正分出来效果也不好，只会引起困惑。
+- ~~两个原则：忠于事实、实用主义。几个特点：相似、大多数、共识（这些属于对抽象论的抽象）~~这条需要改善
+- 抽象就是节点的共性，节点可以是原始印象或抽象，共性通过比较得来。
+- 抽象聚焦于共性而忽视差异。
+- 抽象通过提取共性而减少了对被抽象节点的重复记忆。
+- 抽象总是来自于人已知节点的共性，但对未知信息具有一定的预测作用。
+- 基本上，人的所有规律都是抽象，学科是对所有抽象的分类，即具体某学科是对一部分具有某种共性的抽象的抽象的代词。
+- 你必须用抽象论去组织你的知识的记忆，它才能发挥作用，才能生产价值。
+- 抽象域的概念：抽象适用的范围，新发生的信息与原有抽象不符时，要么修改抽象域要么调整抽象。
+- 关系是一种抽象，其节点具有时间或空间上的相似性。
+- 相关关系、因果关系是两种特殊的关系。
+- 人的精力有限。
+- 抽象论是元认知的产物，即意识的自我观察，因此带有强烈的个人特色和主观倾向。
+- 抽象三种分类：由节点抽象而来、已有抽象的推论、人为构造
+- 学习的方法论：学科理论是抽象的集合，而最初的源头总是节点。通过代词做关键词利用搜索引擎等自上而下找到最具体的抽象，必须是直接从原始印象抽象来的，然后了解这条抽象的原始印象，可以高效学习它，然后学习与已掌握有关联的抽象，然后再去总结抽象的抽象。因为联系到你已熟知的节点的抽象是最容易接受和记忆的。后面再对抽象进行抽象是为了高效记忆。
+- 记忆的方法论：对抽象进行抽象，记忆共性加差异，而不是独立的一条抽象。
+- 抽象的边界问题：一是对未知事物是否符合抽象，即可预测性，无法保证；二是抽象域的边界模糊；三是误差被忽略。
+- 教的方法论：学的反过来。
+- 元认知作为认知的自我感知观察，相当于另一个信息输入源，因此提供了更多信息，这些信息形成的抽象即抽象论。因此元认知是抽象论与以往理论不同的主要成因。
+- 元认知是一种技能，是研究抽象论的重要工具，另一方面，元认知又被抽象论的理论体系定义或者描述，这就注定意味着抽象论的学习或研究过程是个循序渐进的过程，你无法先学元认知再学抽象论或是反过来。元认知给你提供抽象论的原始印象，帮你获得更多的抽象，而抽象论的完善又进一步帮你更好的认识元认知，从而更好的掌握它。
 
