没错，我要写相当于第三版了

--- a/大纲/抽象清单.md
+++ b/大纲/抽象清单.md
@@ -21,3 +21,11 @@
 - 元认知作为认知的自我感知观察，相当于另一个信息输入源，因此提供了更多信息，这些信息形成的抽象即抽象论。因此元认知是抽象论与以往理论不同的主要成因。
 - 元认知是一种技能，是研究抽象论的重要工具，另一方面，元认知又被抽象论的理论体系定义或者描述，这就注定意味着抽象论的学习或研究过程是个循序渐进的过程，你无法先学元认知再学抽象论或是反过来。元认知给你提供抽象论的原始印象，帮你获得更多的抽象，而抽象论的完善又进一步帮你更好的认识元认知，从而更好的掌握它。
 
+----
+
+- 抽象后的感受不再是感受簇的共同部分，而是单独一个感受
+- 分层概念
+  - **第一层：**原始感受、原始感受团、聚焦、视野、联想、强度
+  - **第二层：**概念、规律、域
+  - **第三层：**对象、性质、环境、指代
+
