--- a/大纲/抽象清单.md
+++ b/大纲/抽象清单.md
@@ -1,31 +1,24 @@
-记录一些抽象，想到一条记录一条
-
-- 我们把思维的某些过程提取共性后找个词指代，从而方便讨论与研究，不一定非得把所有的思维过程都总结分类，因为咱目前还没那个能力。没能力分类就不分，反正分出来效果也不好，只会引起困惑。
-- ~~两个原则：忠于事实、实用主义。几个特点：相似、大多数、共识（这些属于对抽象论的抽象）~~这条需要改善
-- 抽象就是节点的共性，节点可以是原始印象或抽象，共性通过比较得来。
-- 抽象聚焦于共性而忽视差异。
-- 抽象通过提取共性而减少了对被抽象节点的重复记忆。
-- 抽象总是来自于人已知节点的共性，但对未知信息具有一定的预测作用。
-- 基本上，人的所有规律都是抽象，学科是对所有抽象的分类，即具体某学科是对一部分具有某种共性的抽象的抽象的代词。
-- 你必须用抽象论去组织你的知识的记忆，它才能发挥作用，才能生产价值。
-- 抽象域的概念：抽象适用的范围，新发生的信息与原有抽象不符时，要么修改抽象域要么调整抽象。
-- 关系是一种抽象，其节点具有时间或空间上的相似性。
-- 相关关系、因果关系是两种特殊的关系。
-- 人的精力有限。
-- 抽象论是元认知的产物，即意识的自我观察，因此带有强烈的个人特色和主观倾向。
-- 抽象三种分类：由节点抽象而来、已有抽象的推论、人为构造
-- 学习的方法论：学科理论是抽象的集合，而最初的源头总是节点。通过代词做关键词利用搜索引擎等自上而下找到最具体的抽象，必须是直接从原始印象抽象来的，然后了解这条抽象的原始印象，可以高效学习它，然后学习与已掌握有关联的抽象，然后再去总结抽象的抽象。因为联系到你已熟知的节点的抽象是最容易接受和记忆的。后面再对抽象进行抽象是为了高效记忆。
-- 记忆的方法论：对抽象进行抽象，记忆共性加差异，而不是独立的一条抽象。
-- 抽象的边界问题：一是对未知事物是否符合抽象，即可预测性，无法保证；二是抽象域的边界模糊；三是误差被忽略。
-- 教的方法论：学的反过来。
-- 元认知作为认知的自我感知观察，相当于另一个信息输入源，因此提供了更多信息，这些信息形成的抽象即抽象论。因此元认知是抽象论与以往理论不同的主要成因。
-- 元认知是一种技能，是研究抽象论的重要工具，另一方面，元认知又被抽象论的理论体系定义或者描述，这就注定意味着抽象论的学习或研究过程是个循序渐进的过程，你无法先学元认知再学抽象论或是反过来。元认知给你提供抽象论的原始印象，帮你获得更多的抽象，而抽象论的完善又进一步帮你更好的认识元认知，从而更好的掌握它。
-
-----
-
 - 抽象后的感受不再是感受簇的共同部分，而是单独一个感受
 - 分层概念
-  - **第一层：**原始感受、原始感受团、聚焦、视野、联想、强度
+  - **第一层：**原始感受、感受、比较、感受团、聚焦、视野、联想、强度、信念
   - **第二层：**概念、规律、域
   - **第三层：**对象、性质、环境、指代
+  - **定义：**
+    - 原始感受：人与外界接触时，不经后续加工的第一印象——更准确地说，假设有任意生理上完全相同但经历可能不同的人，处在某个完全相同的外界环境中，此时这些人思维中相同的部分就是人对这个环境的原始感受。抽象论假定原始感受是存在的。举个例子说，对任意个人，无论他们之前经历过什么，只要现在他们生理结构相同（在这个例子中我们主要要求他们视力正常），那么当他们在同一个位置观看同一个苹果，看到的形状、颜色等，我们假定是相同的。这里他们感受到的苹果形状颜色等视觉感受就是所谓的原始感受。我们基本可以认为绝大多数人生理上的差异并不大，若忽略这部分的差异，原始感受与外界环境一一对应，因此原始感受会随着环境的变化而变化。我们可以近似地认为，人在接触具体的东西时的直接感受都属于原始感受，比如你拿个苹果咬一口，你感受到的外观、触感、味道都属于原始感受。
+    - 感受：我们把人脑子里的所有所思所想称作感受。原始感受是感受的一部分。
+    - 比较：对任意感受，人可以识别之间差异，这个过程叫做比较。举一些例子，识别两种颜色的不同；比较一个苹果和另一个苹果的差异；识别一张彩色渐变图中不同颜色的差异；识别两种气味的不同；分辨一段声音中不同的部分等等。
+    - 感受团：人可以对比感受之间的差异，我们把其中差异相对较小的感受的“集合”称为一个感受团。换句话说，某个感受团的共性要比这个感受团与其他感受之间的共性高，再具体点说，如果我们在某个感受团中加入别的感受，会让这个某个感受团的内部差异显著增加，也就是共性显著下降。
+    - 聚焦：
+    - 视野：
+    - 联想：
+    - 强度：
+    - 信念：
+    - 概念：人可以对比感受团之间的差异，我们把其中差异相对较小的感受团的集合称为一个感受团簇，把集合内所有感受排除差异后的结果称为这个簇对应的概念。在这个模型中我们认为在这句话中的“相对”是放在整个已知范围内比较的，也就是说，在所有已知感受中，所有苹果之间的差异比苹果与其他概念之间的差异要小，换句话说，苹果之间的共性要比苹果与其他概念之间的共性高，再具体点说，如果我们在苹果概念的感受团簇中加入别的感受，会让这个簇的内部差异显著增加，也就是共性显著下降。
+    - 规律：
+    - 域：
+    - 对象：
+    - 性质：
+    - 环境：
+    - 指代
+  - 你会发现抽象论中概念的定义并不像数学或形式逻辑里的概念那样清晰明确。但这并不意味着抽象论和形式逻辑相比就更不实用。在数学中，如果给出平面上直线的定义，对平面中任意一条线，你都可以清楚的说出它是不是直线。
 
