--- a/大纲/待办.md
+++ b/大纲/待办.md
@@ -2,10 +2,9 @@
 
 ##### 计划
 
-1. 先写个样看看情况先
+1. 这次计划先把概念全定义清楚。
 
 ##### 问题
 
-1. 明确表达域的概念
-2. 简单点搞吧，尽快发布
+1. 问题就是自己想的都是一些片段，或者针对某个问题的思考。但想写出来的时候就要整理成一个逻辑比较自洽，比较完整的理论体系，就会遇到很多之前没想到的空白，要难很多。
 
